# bevy-template

./: Cargo.toml  rust-toolchain.toml
src/: main.rs
